# campaign-crud

./: .gitignore  README.md  create_npc.http  pyproject.toml
src/campaign_crud/: main.py
src/campaign_crud/adapters/http/: dependencies.py  npc_controller.py  npc_dto.py
src/campaign_crud/applicastion/: create_npc.py
src/campaign_crud/application/npc/: get_all_npcs.py  get_npc.py
src/campaign_crud/domain/: errors.py  npc.py  npc_id.py  stat_block.py
src/campaign_crud/ports/: npc_repository.py
tests/: test_npc_result.py  test_stat_block.py
tests/application/: test_create_npc_use_case.py
tests/application/npc/: test_create_npc_use_case.py  test_get_all_npcs_use_case.py  test_get_npc_use_case.py
tests/domain/: test_npc_id.py  test_npc_id_assignment.py  test_npc_result.py
tests/doubles/: in_memory_npc_repository.py
